Improve Gallery component to more easier maintain

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -463,42 +463,6 @@
 			width: 100%;
 		}
 
-		&.thumb {
-			text-align: center;
-
-			&:after {
-				@include vendor('transition', 'opacity #{_duration(transition)} ease-in-out');
-				border-radius: _size(border-radius);
-				border: solid 3px rgba(255,255,255,0.5);
-				color: #fff;
-				content: 'View';
-				display: inline-block;
-				font-size: 0.8em;
-				font-weight: _font(weight-bold);
-				left: 50%;
-				line-height: 2.25em;
-				margin: -1.25em 0 0 -3em;
-				opacity: 0;
-				padding: 0 1.5em;
-				position: absolute;
-				text-align: center;
-				text-decoration: none;
-				top: 50%;
-				white-space: nowrap;
-			}
-
-			&:hover {
-				&:after {
-					opacity: 1.0;
-				}
-
-				&:before {
-					background: url('images/overlay.png'), url('images/overlay.png');
-					opacity: 1.0;
-				}
-			}
-		}
-
 		img {
 			border-radius: _size(border-radius);
 			display: block;
@@ -895,21 +859,21 @@
 			img {
 				border-radius: .35em .35em 0 0;
 			}
-			
-			h3 {
-				font-size: 1em;
-				margin: .5em .5em .25em .5em;
-				line-height: 1em;
-			}
-	
-			p {
-				font-size: 0.8em;
-				line-height: 1.5em;
-				margin: 0;
-				padding: 0 0 .25em 0;
-			}
 		}
-	}
+			
+		h3 {
+			font-size: 1em;
+			margin: .5em .5em .25em .5em;
+			line-height: 1em;
+		}
+
+		p {
+			font-size: 0.8em;
+			line-height: 1.5em;
+			margin: 0 .75em .25em .75em;
+			padding: 0 0 .25em 0;
+		}
+}
 
 /* Header */
 
@@ -1160,18 +1124,6 @@
 /* Touch */
 
 	body.is-touch {
-
-		.image {
-			&.thumb {
-				&:before {
-					opacity: 0.5 !important;
-				}
-
-				&:after {
-					display: none !important;
-				}
-			}
-		}
 
 		#header {
 			background-attachment:	scroll;
